fix text overflow for long project names

--- a/client/src/components/DataFiles/DataFilesProjectsList/DataFilesProjectsList.scss
+++ b/client/src/components/DataFiles/DataFilesProjectsList/DataFilesProjectsList.scss
@@ -1,5 +1,4 @@
 .projects-listing {
-  width: inherit;
   flex-grow: 1;
   th {
     color: #484848;
